# controllers/Default.js
@@ -1,35 +1,28 @@
 'use strict';
 
-var url = require('url');
-
-
 var Default = require('../service/DefaultService');
 
 
-module.exports.deleteNotesById = function deleteNotesById (req, res, next) {
-  Default.deleteNotesById(req.swagger.params, res, next);
+module.exports.deleteAutomobilesById = function deleteAutomobilesById (req, res, next) {
+  Default.deleteAutomobilesById(req.swagger.params, res, next);
 };
 
-module.exports.getAllNotes = function getAllNotes (req, res, next) {
-  Default.getAllNotes(req.swagger.params, res, next);
+module.exports.getAllAutomobiles = function getAllAutomobiles (req, res, next) {
+  Default.getAllAutomobiles(req.swagger.params, res, next);
 };
 
-module.exports.getNotesById = function getNotesById (req, res, next) {
-  Default.getNotesById(req.swagger.params, res, next);
+module.exports.getAutomobilesById = function getAutomobilesById (req, res, next) {
+  Default.getAutomobilesById(req.swagger.params, res, next);
 };
 
-module.exports.patchNotesById = function patchNotesById (req, res, next) {
-  Default.patchNotesById(req.swagger.params, res, next);
+module.exports.patchAutomobilesById = function patchAutomobilesById (req, res, next) {
+  Default.patchAutomobilesById(req.swagger.params, res, next);
 };
 
-module.exports.postNote = function postNote (req, res, next) {
-  Default.postNote(req.swagger.params, res, next);
+module.exports.postAutomobile = function postAutomobile (req, res, next) {
+  Default.postAutomobile(req.swagger.params, res, next);
 };
 
-module.exports.putNotesById = function putNotesById (req, res, next) {
-  Default.putNotesById(req.swagger.params, res, next);
+module.exports.putAutomobilesById = function putAutomobilesById (req, res, next) {
+  Default.putAutomobilesById(req.swagger.params, res, next);
 };
-
-module.exports.getCreateDatabase = function getCreateDatabase (req, res, next) {
-  Default.getCreateDatabase(req, res, next)
-}
